<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="vn.quankundeptrai.tieqvietparser.MainActivity"
        android:gravity="center">

        <EditText
            android:id="@+id/originalTiengViet"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textBoxMinHeight"
            android:layout_margin="@dimen/default_margin"
            android:gravity="top"
            android:hint="@string/input_hint"
            android:background="@drawable/dialog_border"
            android:padding="@dimen/textBoxPadding"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/textSize"
            android:textColor="@color/textPink"
            android:textColorHint="@color/textPink"
            />
        <ImageView
            android:id="@+id/convert"
            android:layout_width="@dimen/convertIconSize"
            android:layout_height="@dimen/convertIconSize"
            android:padding="@dimen/convertIconPadding"
            android:src="@drawable/two_way_arrows"
            android:layout_gravity="center_horizontal"
            style="@style/ConvertClick"
            />
        <TextView
            android:id="@+id/tieqVietOutput"
            android:layout_width="match_parent"
            android:minHeight="@dimen/textBoxMinHeight"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:gravity="top"
            android:textColor="@color/textPink"
            android:background="@drawable/dialog_border"
            android:padding="@dimen/textBoxPadding"
            android:textSize="@dimen/textSize" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textPink"
                android:textSize="@dimen/textSize"
                android:text="@string/shareToFacebook"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/facebook_share"
                android:layout_width="@dimen/shareIconSize"
                android:layout_height="@dimen/shareIconSize"
                android:src="@drawable/facebook"
                style="@style/ConvertClick"
                android:layout_marginLeft="@dimen/default_margin"/>
            <ImageView
                android:id="@+id/copy_result"
                android:layout_width="@dimen/shareIconSize"
                android:layout_height="@dimen/shareIconSize"
                android:src="@drawable/copy"
                style="@style/ConvertClick"
                android:layout_marginLeft="@dimen/default_margin"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/image_creator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grayTransparent"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/overlay_margin"
            android:background="@drawable/dialog_border">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin">
                <TextView
                    android:id="@+id/shareText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/imageTextSize"
                    android:background="@drawable/background"
                    android:textColor="@color/textSharePink"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/default_margin">
                    <TextView
                        android:id="@+id/cancel"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:background="@drawable/dialog_border"
                        android:layout_marginRight="5dp"
                        android:textSize="@dimen/textSize"
                        android:text="@string/cancel"
                        android:gravity="center"
                        android:textColor="@color/textPink"
                        android:textStyle="bold"
                        style="@style/ConvertClick"
                        />
                    <TextView
                        android:id="@+id/share_image"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/dialog_border_pink_background"
                        android:textSize="@dimen/textSize"
                        android:text="@string/shareImg"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        style="@style/ShareClick"/>
                    <TextView
                        android:id="@+id/share_status"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/dialog_border_pink_background"
                        android:textSize="@dimen/textSize"
                        android:text="@string/shareStatus"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        style="@style/ShareClick"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>